apps/talos-home/uptime-kuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime-kuma.lan`)
      kind: Rule
      middlewares:
        - name: traefik-chain-noauth
          namespace: networking
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: uptime-kuma-tls
